recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:12: error: Double does not take parameters
    recule(length()*2:Double)
                 ^