recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  var x = 0
  if(steps>=1){
  	
    avance(length:Double)
  	current(steps)
    droite(angle:Double)
  	return tree(steps-1,length,angle,shrink*length)  
  }
  if(steps==0 ){
    recule(length()*2:Double)
    gauche(angle*2:Double)
    return tree(steps+1,length,angle*2,shrink*length)
  }
  
}
